add `makePost` endpoint
